--- a/index.html
+++ b/index.html
@@ -13,8 +13,9 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="description" content="[ L13F.R ]">
+	<meta name="theme-color" content="light">
 
 	<!-- Title -->
 	<title>Script Deface by ./L i e f</title>
